--- a/src/Components/Pages/Home/Home.css
+++ b/src/Components/Pages/Home/Home.css
@@ -1,5 +1,5 @@
 .home-content {
-  height: 90vh;
+  height: 84vh;
 }
 
 .home-content img {
@@ -9,11 +9,40 @@
   width: 100%;
   object-fit: cover;
   z-index: -1;
-  filter: blur(1px);
+  filter: blur(2px);
+  opacity: 0.8;
 }
 
+/* .home-content-text {
+  height: 100%;
+} */
+
 .home-content-text {
-  height: 90%;
+  display: flex;
+  height: 100%;
+  justify-content: center;
+}
+
+.creative{
+  font-family: champ;
+  font-size: 30px;
+}
+
+.designer-developer {
+  font-family: tusker;
+  position: relative;
+  font-size: 230px;
+  /* font-size: 14vw; */
+}
+
+.designer-developer span {
+  font-family: champ;
+  font-size: 40px;
+}
+
+.developer {
+  position: absolute;
+  top: 71%;
 }
 
 .home-right-left {
