--- a/src/Components/Pages/Project/Project.css
+++ b/src/Components/Pages/Project/Project.css
@@ -3,7 +3,6 @@
   width: 100%;
   overflow: hidden;
   background: rgb(33 37 41);
-  /* background: var(--color-2); */
   color: var(--color-1);
 }
 
@@ -18,7 +17,7 @@
 
 .inside-movement-forward {
   font-size: 120px;
-  animation: slideForward 10s infinite linear;
+  animation: 8s slideForward infinite linear;
   white-space: nowrap;
 }
 .empty {
