--- a/src/Components/Navbar/CustomNavbar.css
+++ b/src/Components/Navbar/CustomNavbar.css
@@ -11,7 +11,7 @@
   border-radius: 5rem;
   transform: translateX(-50%);
   left: 50%;
-  bottom: 4%;
+  bottom: 5%;
   border-radius: 36px;
   box-shadow: inset 0 -3px #0000000d, inset 0 0 0 2px #fff,
     inset 0 4px 2px #0000000f, inset 0 0 24px 4px #0000000a, 0 1px 3px #0000001f;
@@ -303,6 +303,9 @@
     right: 28%;
     transition: transform 0.3s ease-in-out;
   }
+  button.menu.opened {
+    transform: translateY(-6px);
+}
 }
 
 @media screen and (max-width: 370px) {
